src/test/deca/syntax/invalid/resultats/test3_empty-lex.res
IDENT: [@0,204:206='idf',<26>,11:0]
IDENT: [@1,208:217='_autre_idf',<26>,11:4]
'{': [@2,219:219='{',<36>,12:0]
'}': [@3,221:221='}',<37>,13:0]
'(': [@4,223:223='(',<34>,14:0]
')': [@5,225:225=')',<35>,15:0]
